name:                p4f-cfa
version:             0.1.0.0
synopsis:            Basic implementation of P4F Control-Flow Analysis
--description:
license:             BSD3
license-file:        LICENSE
author:              Csaba Hruska
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
    P4F
    HCFA

  build-depends:
    base,
    mtl,
    containers,
    pretty-show

  hs-source-dirs:      .
  default-language:    Haskell2010
