name:                p4f-cfa
version:             0.1.0.0
synopsis:            Basic implementation of P4F Control-Flow Analysis
--description:
license:             BSD3
license-file:        LICENSE
author:              Csaba Hruska
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
    P4F
    HCFA
    P4FM
    P4FM_LogicT
    P4FM_Effect
    P4FM2
    TestP4FM
    TestP4FM_Effect
    Cmp

  build-depends:
    base,
    mtl,
    logict,
    containers,
    pretty-show,
    fused-effects

  hs-source-dirs:      .
  default-language:    Haskell2010
